rest-api-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sedss
  namespace: tango-development
  labels:
    app: test-module-rest
    type: front-end
spec:
  replicas: 2
  selector:
    matchLabels:
      type: front-end
  template:
    metadata:
      labels:
        app: sedss
        type: front-end
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name:  sedss
        image:  harbor.tango.rid-intrasoft.eu/sedss/test_module_rest:latest_dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service 
metadata:
  name: sedss
  namespace: tango-development
  labels:
    app: sedss
spec:
  selector:
    app: sedss
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
